--- a/7.神经网络的骨架--nn.Module的使用.ipynb
+++ b/7.神经网络的骨架--nn.Module的使用.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "9e62a495",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from torch import nn\n",
@@ -15,7 +19,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "3d157bdb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# 定义模型\n",
@@ -33,7 +41,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "951ddfa6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +67,11 @@
   {
    "cell_type": "markdown",
    "id": "7d589847",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 卷积操作  Convolution Layers"
    ]
@@ -64,7 +80,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "973f96fc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -95,7 +115,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "8015720b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -120,7 +144,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e9474220",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# 卷积操作\n",
@@ -141,7 +169,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "3e1ea404",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -161,7 +193,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "01a649e8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +220,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "fb03ec72",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -209,7 +249,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "6692fe11",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -229,7 +273,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "2e79bb4e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
